// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alias-key.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[&123 foo, *123 : 456]

=====================================output=====================================
[&123 foo, *123 : 456]

================================================================================
`;

exports[`alias-key.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[&123 foo, *123 : 456]

=====================================output=====================================
[&123 foo, *123 : 456]

================================================================================
`;

exports[`alias-key.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[&123 foo, *123 : 456]

=====================================output=====================================
[&123 foo, *123 : 456]

================================================================================
`;

exports[`array-key.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-key.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
]

================================================================================
`;

exports[`array-key.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-key-array-value.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-key-array-value.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
]

================================================================================
`;

exports[`array-key-array-value.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-plain.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
]

================================================================================
`;

exports[`array-plain.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-plain.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
]

================================================================================
`;

exports[`array-value.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`array-value.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
]

================================================================================
`;

exports[`array-value.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]]

=====================================output=====================================
[
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
]

================================================================================
`;

exports[`comment-between.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
? 123
# comment
: 456
]

=====================================output=====================================
[
  ? 123
  # comment
  : 456,
]

================================================================================
`;

exports[`comment-between.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[
? 123
# comment
: 456
]

=====================================output=====================================
[
    ? 123
    # comment
    : 456,
]

================================================================================
`;

exports[`comment-between.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
? 123
# comment
: 456
]

=====================================output=====================================
[
  ? 123
  # comment
  : 456,
]

================================================================================
`;

exports[`comment-trailing.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[123, # comment
]

=====================================output=====================================
[
  123, # comment
]

================================================================================
`;

exports[`comment-trailing.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[123, # comment
]

=====================================output=====================================
[
    123, # comment
]

================================================================================
`;

exports[`comment-trailing.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[123, # comment
]

=====================================output=====================================
[
  123, # comment
]

================================================================================
`;

exports[`empty.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[]

=====================================output=====================================
[]

================================================================================
`;

exports[`empty.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[]

=====================================output=====================================
[]

================================================================================
`;

exports[`empty.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[]

=====================================output=====================================
[]

================================================================================
`;

exports[`empty-item-colon.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[ : ]

=====================================output=====================================
[: ]

================================================================================
`;

exports[`empty-item-colon.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[ : ]

=====================================output=====================================
[: ]

================================================================================
`;

exports[`empty-item-colon.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[ : ]

=====================================output=====================================
[: ]

================================================================================
`;

exports[`empty-line.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb ]

=====================================output=====================================
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
]

================================================================================
`;

exports[`empty-line.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb ]

=====================================output=====================================
[
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
]

================================================================================
`;

exports[`empty-line.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb ]

=====================================output=====================================
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
]

================================================================================
`;

exports[`empty-line-collapse.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[ aaa, 

bbb ]

=====================================output=====================================
[aaa, bbb]

================================================================================
`;

exports[`empty-line-collapse.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[ aaa, 

bbb ]

=====================================output=====================================
[aaa, bbb]

================================================================================
`;

exports[`empty-line-collapse.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[ aaa, 

bbb ]

=====================================output=====================================
[aaa, bbb]

================================================================================
`;

exports[`long-key.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
    ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  ? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key-long-value.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key-long-value.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-key-long-value.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-plain.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-plain.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-plain.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-value.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-value.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
    : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`long-value.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong]

=====================================output=====================================
[
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  : longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
]

================================================================================
`;

exports[`middle-comment.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set # comment
[]

=====================================output=====================================
!!set # comment
[]

================================================================================
`;

exports[`middle-comment.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!set # comment
[]

=====================================output=====================================
!!set # comment
[]

================================================================================
`;

exports[`middle-comment.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set # comment
[]

=====================================output=====================================
!!set # comment
[]

================================================================================
`;

exports[`middle-comments.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set # comment 1
# comment 2
[]

=====================================output=====================================
!!set
# comment 1
# comment 2
[]

================================================================================
`;

exports[`middle-comments.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!set # comment 1
# comment 2
[]

=====================================output=====================================
!!set
# comment 1
# comment 2
[]

================================================================================
`;

exports[`middle-comments.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set # comment 1
# comment 2
[]

=====================================output=====================================
!!set
# comment 1
# comment 2
[]

================================================================================
`;

exports[`next-empty-line.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
]

=====================================output=====================================
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

  c: 123,
]

================================================================================
`;

exports[`next-empty-line.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
]

=====================================output=====================================
[
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

    c: 123,
]

================================================================================
`;

exports[`next-empty-line.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
]

=====================================output=====================================
[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

  c: 123,
]

================================================================================
`;

exports[`props.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set &anchor [1]

=====================================output=====================================
!!set &anchor [1]

================================================================================
`;

exports[`props.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!set &anchor [1]

=====================================output=====================================
!!set &anchor [1]

================================================================================
`;

exports[`props.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set &anchor [1]

=====================================output=====================================
!!set &anchor [1]

================================================================================
`;

exports[`props-in-map.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!set &anchor [1]

=====================================output=====================================
a: !!set &anchor [1]

================================================================================
`;

exports[`props-in-map.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
a: !!set &anchor [1]

=====================================output=====================================
a: !!set &anchor [1]

================================================================================
`;

exports[`props-in-map.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!set &anchor [1]

=====================================output=====================================
a: !!set &anchor [1]

================================================================================
`;

exports[`short-key.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[? 1,? 2,? 3]

=====================================output=====================================
[? 1, ? 2, ? 3]

================================================================================
`;

exports[`short-key.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[? 1,? 2,? 3]

=====================================output=====================================
[? 1, ? 2, ? 3]

================================================================================
`;

exports[`short-key.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[? 1,? 2,? 3]

=====================================output=====================================
[? 1, ? 2, ? 3]

================================================================================
`;

exports[`short-key-short-value.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[1: a,2: b,3: c]

=====================================output=====================================
[1: a, 2: b, 3: c]

================================================================================
`;

exports[`short-key-short-value.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[1: a,2: b,3: c]

=====================================output=====================================
[1: a, 2: b, 3: c]

================================================================================
`;

exports[`short-key-short-value.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[1: a,2: b,3: c]

=====================================output=====================================
[1: a, 2: b, 3: c]

================================================================================
`;

exports[`short-plain.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[1,2,3]

=====================================output=====================================
[1, 2, 3]

================================================================================
`;

exports[`short-plain.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[1,2,3]

=====================================output=====================================
[1, 2, 3]

================================================================================
`;

exports[`short-plain.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[1,2,3]

=====================================output=====================================
[1, 2, 3]

================================================================================
`;

exports[`short-value.yml - {"bracketSpacing":false} 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[: 1,: 2,: 3]

=====================================output=====================================
[: 1, : 2, : 3]

================================================================================
`;

exports[`short-value.yml - {"tabWidth":4} 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[: 1,: 2,: 3]

=====================================output=====================================
[: 1, : 2, : 3]

================================================================================
`;

exports[`short-value.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[: 1,: 2,: 3]

=====================================output=====================================
[: 1, : 2, : 3]

================================================================================
`;
